<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_height="match_parent"
              android:layout_width="match_parent"
              android:orientation="vertical"
              android:gravity="center_vertical"
              android:background="#ffff" >

    <RadioButton
            android:layout_width="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:id="@+id/radioButton"/>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:id="@+id/values"
            android:orientation="vertical"
            android:layout_toEndOf="@+id/radioButton">

        <!-- MODEL -->
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                      android:layout_height="wrap_content"
                      android:layout_width="wrap_content"
                      android:layout_marginTop="8dp"
                      android:layout_marginStart="5dp"
                      android:layout_marginEnd="5dp"
                      android:orientation="horizontal"
                      android:gravity="center_vertical"
                      android:background="#ffff" >
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="3dp"
                    android:textColor="@android:color/black"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/room_name"
                    android:id="@+id/tv_room_name"
                    android:gravity="center" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/tv_room_name_result"
                    android:gravity="center" />
        </LinearLayout>

        <!-- IP -->
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                      android:layout_height="wrap_content"
                      android:layout_width="wrap_content"
                      android:orientation="horizontal"
                      android:layout_marginStart="5dp"
                      android:layout_marginEnd="5dp"
                      android:gravity="center_vertical"
                      android:background="#ffff" >
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:layout_marginEnd="3dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/room_number"
                    android:id="@+id/tv_room_number"
                    android:gravity="center" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/tv_room_number_result"
                    android:gravity="center" />
        </LinearLayout>

        <!-- PORT -->
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                      android:layout_height="wrap_content"
                      android:layout_width="wrap_content"
                      android:orientation="horizontal"
                      android:gravity="center_vertical"
                      android:background="#ffff" >
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:textColor="@android:color/black"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/room_status"
                    android:id="@+id/tv_room_status"
                    android:gravity="center" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/tv_room_status_result"
                    android:gravity="center" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>